--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     
     <!-- Storage permissions -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- Existing permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     
-    <!-- Microphone permission -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    
-    <!-- Contacts permission -->
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-    
-    <!-- Phone permission -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    
-    <!-- SMS permission -->
-    <uses-permission android:name="android.permission.SEND_SMS" />
-    <uses-permission android:name="android.permission.READ_SMS" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -57,11 +43,6 @@
         <activity
             android:name=".ui.activity.Lab1MenuActivity"
             android:exported="false" />
-            
-        <activity
-            android:name=".ui.activity.MyViewActivity"
-            android:exported="false" />
-            
         <activity
             android:name=".ui.activity.SubjectListActivity"
             android:exported="false" />
@@ -77,11 +58,6 @@
         <activity
             android:name=".ui.activity.CalculatorActivity"
             android:exported="false" />
-            
-        <activity
-            android:name=".ui.activity.LoginSystemActivity"
-            android:exported="false" />
-            
         <activity
             android:name=".ui.activity.Lab3MenuActivity"
             android:exported="false" />
@@ -146,6 +122,15 @@
             
         <activity
             android:name=".ui.activity.CameraPermissionActivity"
+            android:exported="false" />
+            
+        <!-- Lab 8 Activities -->
+        <activity
+            android:name=".ui.activity.Lab8MenuActivity"
+            android:exported="false" />
+            
+        <activity
+            android:name=".ui.activity.SendNotificationActivity"
             android:exported="false" />
             
     </application>
